--- a/libsccalgorithms/CMakeLists.txt
+++ b/libsccalgorithms/CMakeLists.txt
@@ -2,7 +2,8 @@ hunter_add_package(Boost COMPONENTS graph)
 find_package(Boost CONFIG REQUIRED graph)
 
 add_library(SCCAlgorithms
-        src/scc_algorithms.cpp
+        src/scc_algorithms_pearce.cpp
+        src/scc_algorithms_nuutila.cpp
         src/scc_utils.cpp
         src/scc_algorithms_tarjan.cpp)
 
