--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,7 +3,7 @@ find_package(Boost CONFIG REQUIRED graph)
 
 add_executable(SCCApp
         src/scc_app_main.cpp
-        src/scc_reports.cpp)
+        src/scc_reports.cpp include/console_formatter.h)
 
 target_include_directories(SCCApp
         PUBLIC
