--- a/libsccalgorithms/CMakeLists.txt
+++ b/libsccalgorithms/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(SCCAlgorithms
         src/scc_algorithms_pearce.cpp
         src/scc_algorithms_nuutila.cpp
         src/scc_utils.cpp
+        src/iterative/scc_algorithms_nuutila_iterative.cpp
         src/scc_algorithms_tarjan.cpp)
 
 add_library(SCCAlgorithms::sccalgorithms
