--- a/libsccalgorithms/CMakeLists.txt
+++ b/libsccalgorithms/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(SCCAlgorithms
         src/scc_utils.cpp
         src/iterative/scc_algorithms_nuutila1_iterative.cpp
         src/iterative/scc_algorithms_nuutila2_iterative.cpp
+        src/iterative/scc_algorithms_pearce_iterative.cpp
         src/scc_algorithms_tarjan.cpp)
 
 add_library(SCCAlgorithms::sccalgorithms
