--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ sudo: false
 # GCC 7
 os: linux
 dist: trusty
-env: UNIT_TESTS=true COMPILER=g++-7
+env: COMPILER=g++-7
 addons: { apt: { packages: ["g++-7"], sources: ["ubuntu-toolchain-r-test"] } }
 
 matrix:
@@ -15,29 +15,27 @@ matrix:
     # Clang 5.0
     - os: linux
       dist: trusty
-      env: UNIT_TESTS=true COMPILER=clang++-5.0
+      env: COMPILER=clang++-5.0
       addons: &defaults { apt: { packages: ["clang-5.0", ], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-5.0"] } }
 
     # Clang 6.0
     - os: linux
       dist: trusty
-      env: UNIT_TESTS=true COMPILER=clang++-6.0
+      env: COMPILER=clang++-6.0
       addons: &defaults { apt: { packages: ["clang-6.0", ], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0"] } }
 
     # GCC 6
     - os: linux
       dist: trusty
-      env: UNIT_TESTS=true COMPILER=g++-6
+      env: COMPILER=g++-6
       addons: { apt: { packages: ["g++-6"], sources: ["ubuntu-toolchain-r-test"] } }
 
     # Xcode 8.3
     - os: osx
-      env: UNIT_TESTS=true
       osx_image: xcode8.3
 
     # Xcode 9.1
     - os: osx
-      env: UNIT_TESTS=true
       osx_image: xcode9.1
 
 install:
@@ -79,17 +77,8 @@ install:
 
 before_script:
   - cd "${TRAVIS_BUILD_DIR}"
-  - |
-    if [[ "${UNIT_TEST}" == "true" ]]; then
-      export CMAKE_OPTIONS="${CMAKE_OPTIONS} -DCMAKE_BUILD_TYPE=Debug -DSCC_ALGORITHM_BUILD_TEST=ON"
-    fi
-
-  - (mkdir build && cd build && cmake .. ${CMAKE_OPTIONS})
-
+  - (mkdir build && cd build && cmake -DSCC_ALGORITHM_BUILD_TEST=ON ..)
 
 script:
-  - (cd build && make)
-  - |
-    if [[ "${UNIT_TESTS}" == "true" ]]; then
-      ./libsccalgorithms/test/SCCAlgorithms_test
-    fi
+  - cd "${TRAVIS_BUILD_DIR}"
+  - (cd build && make && ./libsccalgorithms/test/SCCAlgorithms_test)
